Fixed spacing and styling for errors and buttons.

--- a/client-angular/src/styles.css
+++ b/client-angular/src/styles.css
@@ -11,3 +11,7 @@
 .page-title {
   font-size: xx-large;
 }
+
+mat-error {
+  font-weight: bold;
+}
